fixes and starting doing tests